Portfolio - fixed column widths - fixed missing dollar sign to trade price - modified css table cell padding - added placeholder for position expand/collapse

--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -571,7 +571,7 @@ th {
 		}
 
 td {
-	padding: 0.25em 2em 0.25em 0em;
+	/*padding: 0.25em 2em 0.25em 0em;*/
 	border: 0 none;
 }
 
